--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "carpeta-dnd-beyond-vsc",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,5 +20,6 @@
   "devDependencies": {
     "node-sass": "^7.0.3",
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
